# github-scammer

./: LICENSE.rst  README.rst  main.py  setup.cfg
misc/: 0005f241-b872-416a-b7c7-c8e390bb096c.txt  00064de2-bcf4-4816-9910-731a53db4f40.txt  000d5b22-c67d-4417-ad5d-5fbc72e1c26c.txt  00153b77-80f3-4845-9a7f-5d607e06dc06.txt  001c2f63-eac5-4434-849c-fb3283b224a7.txt  002b975f-710b-488d-ab53-62546e26f2b1.txt  0030da26-3236-441f-b1d2-4187899053fe.txt  003c2119-cab8-4d31-a180-0110c6a2a62f.txt  003c5c0b-73f5-4699-87a0-eb4a2ed71404.txt  004d17cf-8295-4ac7-975d-30a56890510b.txt  0072e327-264f-4d4a-accd-70bacb748358.txt  00732d6e-2634-490c-a5a9-a388ef8802d4.txt  007fa945-88e9-4b2b-9b9e-8d3404351990.txt  00973c2a-02cf-40ad-baf4-f6b877185a24.txt  00a84acc-b7b4-47cf-bf38-1ac8f426b936.txt  00b8aeaf-f8c1-479b-999b-85adf03a5c39.txt  00c91764-a96d-4ae4-a483-a58498174384.txt  00cda85a-a2ae-41f2-ae9b-1c0d36524575.txt  00da61fd-fd8a-448d-978c-8deebc4be00d.txt  00dc1678-8576-485e-ba44-6b175c37a240.txt  00e1b219-68bb-4596-8d91-666cc70f0d63.txt  00f11585-b05b-4222-917f-f5a9762c2f56.txt  00fc7eb8-9b7e-4492-aaa8-f91bdd4f4686.txt  0103d1e1-7fb6-49cb-9081-b5173bc4336d.txt  012665e2-7a73-49c7-bcc9-d4e1ae2a7fd3.txt  01266d0b-0e7e-4adb-8c9b-9846e79dd225.txt  013498fd-2a9f-40bf-b379-453dde690505.txt  01422072-21bb-46ac-8769-4b8fe0e675f7.txt  01431f63-d677-4fcb-8b27-ac0e0cf744d5.txt  0148d056-9a90-44c4-b611-5e35ead4def8.txt  01529085-7bd5-4d55-8a5b-b71dda3ad995.txt  0154a41b-1053-497f-8da8-89328ab809f0.txt  0158a8b4-c4d9-4587-b31d-3d4a113c0dac.txt  015a5cc8-834f-4958-98df-811d3a5e44ef.txt  (+4900 more)
(+1 files in other folders)
