[metadata]
name = github-scammer
description = Pimp your Github constribution mosaic
version = 0.1.0
author = Thomas PERROT
author_email = thomas.perrot1@gmail.com
url = https://github.com/thomasperrot/github-scammer
long_description = file: README.rst
keywords =
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    PyGithub

[options.packages.find]
include =
    src
    src.*

[options.entry_points]
console_scripts =
    github_scammer = src.github_scammer:main